Fixed a bug with the value of the 'value' attribute
As li element does not have value attribute by default and jquery val()
function only works with input(like) elements, $('ma-select-li').val()
wans't returing correct value. This has been fixed.

--- a/Sample.html
+++ b/Sample.html
@@ -11,39 +11,39 @@
         <div class="ma-select-box"><input class="ma-select-box-filter" type="text"></div>
         <div class="ma-select-options">
             <ul class="ma-select-ul">
-                <li class="ma-select-li ma-visible-option" value="7">MERCEDES</li>
-                <li class="ma-select-li ma-visible-option" value="10">BMW</li>
-                <li class="ma-select-li ma-visible-option" value="14">AUDI</li>
-                <li class="ma-select-li ma-visible-option" value="3">VOLKSWAGEN</li>
-                <li class="ma-select-li ma-visible-option" value="30">PORSCHE</li>
-                <li class="ma-select-li ma-visible-option" value="104">BENTLEY</li>
-                <li class="ma-select-li ma-visible-option" value="5">FERRARI</li>
-                <li class="ma-select-li ma-visible-option" value="57">BUGATTI</li>
-                <li class="ma-select-li ma-visible-option" value="105">NISSAN</li>
-                <li class="ma-select-li ma-visible-option" value="78">TOYOTA</li>
-                <li class="ma-select-li ma-visible-option" value="58">HONDA</li>
-                <li class="ma-select-li ma-visible-option" value="48">MITSIBISHI</li>
-                <li class="ma-select-li ma-visible-option" value="55">SUBUARU</li>
-                <li class="ma-select-li ma-visible-option" value="59">LEXUS</li>
-                <li class="ma-select-li ma-visible-option" value="16">INFINITI</li>
-                <li class="ma-select-li ma-visible-option" value="20">HYUNDAI</li>
-                <li class="ma-select-li ma-visible-option" value="9">KIA</li>
-                <li class="ma-select-li ma-visible-option" value="31">ASTON MARTIN</li>
-                <li class="ma-select-li ma-visible-option" value="4">ROLLS ROYCE</li>
-                <li class="ma-select-li ma-visible-option" value="2">JEEP</li>
-                <li class="ma-select-li ma-visible-option" value="18">FORD</li>
-                <li class="ma-select-li ma-visible-option" value="1">DODGE</li>
-                <li class="ma-select-li ma-visible-option" value="17">CHRYSLER</li>
-                <li class="ma-select-li ma-visible-option" value="19">MASERATTI</li>
-                <li class="ma-select-li ma-visible-option" value="21">PEUGEOT</li>
-                <li class="ma-select-li ma-visible-option" value="63">CITROEN</li>
-                <li class="ma-select-li ma-visible-option" value="25">MAZDA</li>
-                <li class="ma-select-li ma-visible-option" value="26">PONTIAC</li>
-                <li class="ma-select-li ma-visible-option" value="38">TESLA</li>
-                <li class="ma-select-li ma-visible-option" value="39">ACURA</li>
-                <li class="ma-select-li ma-visible-option" value="40">MERCURY</li>
-                <li class="ma-select-li ma-visible-option" value="99">VOLVO</li>
-                <li class="ma-select-li ma-visible-option" value="69">RENAULT</li>
+                <li class="ma-select-li ma-visible-option" optvalue="7">MERCEDES</li>
+                <li class="ma-select-li ma-visible-option" optvalue="10">BMW</li>
+                <li class="ma-select-li ma-visible-option" optvalue="14">AUDI</li>
+                <li class="ma-select-li ma-visible-option" optvalue="3">VOLKSWAGEN</li>
+                <li class="ma-select-li ma-visible-option" optvalue="30">PORSCHE</li>
+                <li class="ma-select-li ma-visible-option" optvalue="104">BENTLEY</li>
+                <li class="ma-select-li ma-visible-option" optvalue="5">FERRARI</li>
+                <li class="ma-select-li ma-visible-option" optvalue="57">BUGATTI</li>
+                <li class="ma-select-li ma-visible-option" optvalue="105">NISSAN</li>
+                <li class="ma-select-li ma-visible-option" optvalue="78">TOYOTA</li>
+                <li class="ma-select-li ma-visible-option" optvalue="58">HONDA</li>
+                <li class="ma-select-li ma-visible-option" optvalue="48">MITSIBISHI</li>
+                <li class="ma-select-li ma-visible-option" optvalue="55">SUBUARU</li>
+                <li class="ma-select-li ma-visible-option" optvalue="59">LEXUS</li>
+                <li class="ma-select-li ma-visible-option" optvalue="16">INFINITI</li>
+                <li class="ma-select-li ma-visible-option" optvalue="20">HYUNDAI</li>
+                <li class="ma-select-li ma-visible-option" optvalue="9">KIA</li>
+                <li class="ma-select-li ma-visible-option" optvalue="31">ASTON MARTIN</li>
+                <li class="ma-select-li ma-visible-option" optvalue="4">ROLLS ROYCE</li>
+                <li class="ma-select-li ma-visible-option" optvalue="2">JEEP</li>
+                <li class="ma-select-li ma-visible-option" optvalue="18">FORD</li>
+                <li class="ma-select-li ma-visible-option" optvalue="1">DODGE</li>
+                <li class="ma-select-li ma-visible-option" optvalue="17">CHRYSLER</li>
+                <li class="ma-select-li ma-visible-option" optvalue="19">MASERATTI</li>
+                <li class="ma-select-li ma-visible-option" optvalue="21">PEUGEOT</li>
+                <li class="ma-select-li ma-visible-option" optvalue="63">CITROEN</li>
+                <li class="ma-select-li ma-visible-option" optvalue="25">MAZDA</li>
+                <li class="ma-select-li ma-visible-option" optvalue="26">PONTIAC</li>
+                <li class="ma-select-li ma-visible-option" optvalue="38">TESLA</li>
+                <li class="ma-select-li ma-visible-option" optvalue="39">ACURA</li>
+                <li class="ma-select-li ma-visible-option" optvalue="40">MERCURY</li>
+                <li class="ma-select-li ma-visible-option" optvalue="99">VOLVO</li>
+                <li class="ma-select-li ma-visible-option" optvalue="69">RENAULT</li>
             </ul>
         </div>
         <input class="ma-select-hidden"  type="hidden">
